--- a/package.json
+++ b/package.json
@@ -1,22 +1,49 @@
 {
-  "name": "fuel-dey-here-web-app",
+  "name": "bakery-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/open-sans": "^5.0.5",
+    "@fontsource/raleway": "^5.0.5",
+    "@next/font": "^13.4.10",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "eslint": "8.43.0",
+    "antd": "^5.6.3",
     "eslint-config-next": "13.4.7",
+    "formik": "^2.4.2",
+    "framer-motion": "^10.12.17",
+    "mini-css-extract-plugin": "^2.7.6",
     "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.2.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.1",
+    "yup": "^1.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.44.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.6",
+    "typescript": "^4.9.5",
+    "husky": "^8.0.0"
   }
 }
