--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -23,6 +24,7 @@
     "eslint-config-next": "13.4.7",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.17",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "next": "13.4.7",
     "react": "^18.2.0",
@@ -41,9 +43,9 @@
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.44.0",
+    "husky": "^8.0.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.6",
-    "typescript": "^4.9.5",
-    "husky": "^8.0.0"
+    "typescript": "^4.9.5"
   }
 }
