--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.5",
     "@fontsource/raleway": "^5.0.5",
-    "@next/font": "^13.4.10",
+    "@next/codemod": "^13.4.13",
+    "@next/font": "^13.4.13",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.6",
     "next": "13.4.7",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
